@@ -3619,8 +3619,9 @@ int pc_useitem(struct map_session_data *sd,int n)
 		sd->sc.data[SC_TRICKDEAD] ||
 		sd->sc.data[SC_HIDING] ||
 		(sd->sc.data[SC_NOCHAT] && sd->sc.data[SC_NOCHAT]->val1&MANNER_NOITEM) ||
-		sd->sc.data[SC_DIAMONDDUST] ||
-		sd->sc.data[SC__SHADOWFORM]
+		sd->sc.data[SC_WHITEIMPRISON] ||
+		sd->sc.data[SC__SHADOWFORM] ||
+		sd->sc.data[SC_DIAMONDDUST]
 	))
 		return 0;
 
